--- a/public/index.html
+++ b/public/index.html
@@ -17,30 +17,15 @@
             color: #333;
             background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
             min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 2rem;
-        }
-
-        header {
-            text-align: center;
-            color: white;
-            margin-bottom: 3rem;
-            animation: fadeIn 1s ease-out;
-        }
-
-        h1 {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-        }
-
-        .tagline {
-            font-size: 1.3rem;
-            opacity: 0.9;
+            width: 100%;
+            max-width: 800px;
+            margin: 2rem;
         }
 
         .form-card {
@@ -48,8 +33,6 @@
             border-radius: 20px;
             padding: 3rem;
             box-shadow: 0 20px 40px rgba(0,0,0,0.2);
-            max-width: 800px;
-            margin: 0 auto;
             animation: slideUp 0.8s ease-out;
         }
 
@@ -153,32 +136,6 @@
             box-shadow: 0 6px 20px rgba(46, 204, 113, 0.4);
         }
 
-        .features {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-            margin-top: 4rem;
-            color: white;
-        }
-
-        .feature {
-            text-align: center;
-            padding: 2rem;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            backdrop-filter: blur(10px);
-            transition: transform 0.3s;
-        }
-
-        .feature:hover {
-            transform: translateY(-5px);
-        }
-
-        .feature-icon {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-        }
-
         .success-message {
             background: #d4edda;
             border: 1px solid #c3e6cb;
@@ -199,30 +156,20 @@
             display: none;
         }
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(-20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
         @keyframes slideUp {
             from { opacity: 0; transform: translateY(40px); }
             to { opacity: 1; transform: translateY(0); }
         }
 
         @media (max-width: 768px) {
-            h1 { font-size: 2rem; }
             .form-card { padding: 2rem; }
             .states-grid { grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); }
+            .container { margin: 1rem; }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>⛈️ Storm Alert Pro</h1>
-            <p class="tagline">Get instant alerts when storms create roofing opportunities in your service areas</p>
-        </header>
-
         <div class="form-card">
             <div class="success-message" id="successMessage">
                 ✅ Success! You'll receive storm alerts for your selected states.
@@ -262,29 +209,6 @@
 
                 <button type="submit" class="submit-btn">Start Receiving Storm Alerts</button>
             </form>
-        </div>
-
-        <div class="features">
-            <div class="feature">
-                <div class="feature-icon">📍</div>
-                <h3>Precise Location Data</h3>
-                <p>Get exact zip codes and affected areas for targeted canvassing</p>
-            </div>
-            <div class="feature">
-                <div class="feature-icon">💰</div>
-                <h3>ROI Analysis</h3>
-                <p>Estimated damage severity and potential job value calculations</p>
-            </div>
-            <div class="feature">
-                <div class="feature-icon">⚡</div>
-                <h3>Real-Time Alerts</h3>
-                <p>Instant notifications when storms hit your service areas</p>
-            </div>
-            <div class="feature">
-                <div class="feature-icon">📊</div>
-                <h3>Detailed Reports</h3>
-                <p>Comprehensive storm data including wind speed, hail size, and more</p>
-            </div>
         </div>
     </div>
 
