--- a/public/index.html
+++ b/public/index.html
@@ -15,25 +15,9 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             line-height: 1.6;
             color: #333;
-            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .container {
-            width: 100%;
-            max-width: 800px;
-            margin: 2rem;
-        }
-
-        .form-card {
             background: white;
-            border-radius: 20px;
-            padding: 3rem;
-            box-shadow: 0 20px 40px rgba(0,0,0,0.2);
-            animation: slideUp 0.8s ease-out;
+            min-height: 100vh;
+            padding: 2rem;
         }
 
         .form-group {
@@ -156,61 +140,51 @@
             display: none;
         }
 
-        @keyframes slideUp {
-            from { opacity: 0; transform: translateY(40px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
         @media (max-width: 768px) {
-            .form-card { padding: 2rem; }
+            body { padding: 1rem; }
             .states-grid { grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); }
-            .container { margin: 1rem; }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="form-card">
-            <div class="success-message" id="successMessage">
-                ✅ Success! You'll receive storm alerts for your selected states.
-            </div>
-            <div class="error-message" id="errorMessage">
-                ❌ Error: Please fill in all required fields.
-            </div>
-
-            <form id="signupForm">
-                <div class="form-group">
-                    <label for="companyName">Company Name *</label>
-                    <input type="text" id="companyName" name="companyName" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="email">Email Address *</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="phone">Phone Number</label>
-                    <input type="tel" id="phone" name="phone">
-                </div>
-
-                <div class="form-group">
-                    <label for="contactName">Contact Name *</label>
-                    <input type="text" id="contactName" name="contactName" required>
-                </div>
-
-                <div class="form-group">
-                    <label>Select States for Storm Alerts *</label>
-                    <button type="button" class="select-all-btn" onclick="toggleAllStates()">Select/Deselect All</button>
-                    <div class="states-grid" id="statesGrid">
-                        <!-- States will be populated by JavaScript -->
-                    </div>
-                </div>
-
-                <button type="submit" class="submit-btn">Start Receiving Storm Alerts</button>
-            </form>
-        </div>
+    <div class="success-message" id="successMessage">
+        ✅ Success! You'll receive storm alerts for your selected states.
     </div>
+    <div class="error-message" id="errorMessage">
+        ❌ Error: Please fill in all required fields.
+    </div>
+
+    <form id="signupForm">
+        <div class="form-group">
+            <label for="companyName">Company Name *</label>
+            <input type="text" id="companyName" name="companyName" required>
+        </div>
+
+        <div class="form-group">
+            <label for="email">Email Address *</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+
+        <div class="form-group">
+            <label for="phone">Phone Number</label>
+            <input type="tel" id="phone" name="phone">
+        </div>
+
+        <div class="form-group">
+            <label for="contactName">Contact Name *</label>
+            <input type="text" id="contactName" name="contactName" required>
+        </div>
+
+        <div class="form-group">
+            <label>Select States for Storm Alerts *</label>
+            <button type="button" class="select-all-btn" onclick="toggleAllStates()">Select/Deselect All</button>
+            <div class="states-grid" id="statesGrid">
+                <!-- States will be populated by JavaScript -->
+            </div>
+        </div>
+
+        <button type="submit" class="submit-btn">Start Receiving Storm Alerts</button>
+    </form>
 
     <script src="config.js"></script>
     <script>
