--- a/public/index.html
+++ b/public/index.html
@@ -176,6 +176,24 @@
         </div>
 
         <div class="form-group">
+            <label>Alert Preferences *</label>
+            <div style="display: flex; gap: 2rem; margin-top: 0.5rem;">
+                <label style="display: flex; align-items: center; font-weight: normal; cursor: pointer;">
+                    <input type="radio" name="alertPreferences" value="both" checked style="margin-right: 0.5rem;">
+                    Both Hail & Wind
+                </label>
+                <label style="display: flex; align-items: center; font-weight: normal; cursor: pointer;">
+                    <input type="radio" name="alertPreferences" value="hail" style="margin-right: 0.5rem;">
+                    Hail Only
+                </label>
+                <label style="display: flex; align-items: center; font-weight: normal; cursor: pointer;">
+                    <input type="radio" name="alertPreferences" value="wind" style="margin-right: 0.5rem;">
+                    Wind Only
+                </label>
+            </div>
+        </div>
+
+        <div class="form-group">
             <label>Select States for Storm Alerts *</label>
             <button type="button" class="select-all-btn" onclick="toggleAllStates()">Select/Deselect All</button>
             <div class="states-grid" id="statesGrid">
@@ -233,6 +251,7 @@
                 email: document.getElementById('email').value,
                 phone: document.getElementById('phone').value,
                 contactName: document.getElementById('contactName').value,
+                alertPreferences: document.querySelector('input[name="alertPreferences"]:checked').value,
                 states: Array.from(document.querySelectorAll('input[name="states"]:checked'))
                     .map(cb => cb.value)
             };
