Remove checkmark emoji from 12-month PDF option label

--- a/public/index.html
+++ b/public/index.html
@@ -196,7 +196,7 @@
         <div class="form-group">
             <label style="display: flex; align-items: center; font-weight: normal; cursor: pointer; background: #f8f9fa; padding: 1rem; border-radius: 8px; border: 2px solid #e0e0e0;">
                 <input type="checkbox" id="includeStormHistory" name="includeStormHistory" style="margin-right: 0.75rem;">
-                <span style="font-weight: 600;">✔️ Include 12-Month Storm History PDF (hail + 70+ mph wind events in your area)</span>
+                <span style="font-weight: 600;">Include 12-Month Storm History PDF (hail + 70+ mph wind events in your area)</span>
             </label>
         </div>
 
