Fix 12-month PDF generation issues: remove wind data, fix special characters, add 5-state limit, improve data collection

--- a/public/index.html
+++ b/public/index.html
@@ -196,8 +196,11 @@
         <div class="form-group">
             <label style="display: flex; align-items: center; font-weight: normal; cursor: pointer; background: #f8f9fa; padding: 1rem; border-radius: 8px; border: 2px solid #e0e0e0;">
                 <input type="checkbox" id="includeStormHistory" name="includeStormHistory" style="margin-right: 0.75rem;">
-                <span style="font-weight: 600;">Include 12-Month Storm History PDF (hail + 70+ mph wind events in your area)</span>
+                <span style="font-weight: 600;">Include 12-Month Hail History PDF (all hail events ≥0.75" in your area)</span>
             </label>
+            <p style="font-size: 0.85rem; color: #666; margin-top: 0.5rem; margin-left: 2rem;">
+                <em>Note: PDF generation is limited to 5 states or fewer to ensure complete data coverage</em>
+            </p>
         </div>
 
         <div class="form-group">
